<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="star"
            android:elevation="8dp"
            android:onClick="add_neighbour"
            app:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/ic_star_border_white_24dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ScrollView>


        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.design.widget.CollapsingToolbarLayout>

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/text_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_avatar"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="Name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />




        <android.support.v7.widget.CardView

            android:layout_below="@+id/image_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/text_adress"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="15dp"
                    android:text="Adress"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_phone_24"
                    android:drawablePadding="15dp"
                    android:text="Phone"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/text_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:drawablePadding="15dp"
                    android:text="Mail"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="A propos de moi"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="normal" />


            <TextView

                android:id="@+id/text_blabla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:text="blabla"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>



